# EcoDo

./: LICENSE  README.md
cc/: main.py  pyproject.toml  tes.txt
cc/SavedModel/: converted_model.tflite  saved_model.pb
cc/SavedModel/variables/: variables.index
cc/ecodo-server-master/: methode.py
cc/server/: app.py
dataset/anotate/: multiple_object (1).xml  multiple_object (10).xml  multiple_object (100).xml  multiple_object (101).xml  multiple_object (102).xml  multiple_object (103).xml  multiple_object (104).xml  multiple_object (105).xml  multiple_object (106).xml  multiple_object (107).xml  multiple_object (108).xml  multiple_object (109).xml  multiple_object (11).xml  multiple_object (110).xml  multiple_object (111).xml  multiple_object (112).xml  multiple_object (113).xml  multiple_object (114).xml  multiple_object (115).xml  multiple_object (116).xml  multiple_object (117).xml  multiple_object (118).xml  multiple_object (119).xml  multiple_object (12).xml  multiple_object (120).xml  multiple_object (121).xml  multiple_object (122).xml  multiple_object (123).xml  multiple_object (124).xml  multiple_object (125).xml  multiple_object (126).xml  multiple_object (127).xml  multiple_object (128).xml  multiple_object (129).xml  multiple_object (13).xml  multiple_object (130).xml  multiple_object (131).xml  multiple_object (132).xml  multiple_object (133).xml  multiple_object (134).xml  (+273 more)
dataset/resize/: label.csv
md/: tes.txt
md/EcoDo/: settings.gradle.kts
ml/: Ecodo.ipynb  class.txt  convert.py  split.py  splitimg.py
ml/model/: fingerprint.pb
(+112 files in other folders)
